# mlfmu

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .sourcery.yaml  ADVANCED.html  ADVANCED.md  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.html  LICENSE_THIRD_PARTY  MLMODEL.html  MLMODEL.md  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  api.html  azure-docbuild.yml  cli.html  cli.mlfmu.html  conan_install.bat  conanfile.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  tox.ini
.github/: pull_request_template.md
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _bump-my-version.yml  _create_github_release.yml  _merge_into_release.yml  _publish_release.yml  bump-my-version.yml  publish_release.yml  push_to_release.yml
_autosummary/: mlfmu.api.MlFmuCommand.html  mlfmu.api.MlFmuProcess.html  mlfmu.api.html  mlfmu.types.fmu_component.BaseModelConfig.html  mlfmu.types.fmu_component.FmiCausality.html  mlfmu.types.fmu_component.FmiInputVariable.html  mlfmu.types.fmu_component.FmiModel.html  mlfmu.types.fmu_component.FmiOutputVariable.html  mlfmu.types.fmu_component.FmiVariability.html  mlfmu.types.fmu_component.FmiVariable.html  mlfmu.types.fmu_component.FmiVariableType.html  mlfmu.types.fmu_component.InputVariable.html  mlfmu.types.fmu_component.InternalState.html  mlfmu.types.fmu_component.ModelComponent.html  mlfmu.types.fmu_component.OutputVariable.html  mlfmu.types.fmu_component.Variable.html  mlfmu.types.fmu_component.html  mlfmu.types.html  mlfmu.types.onnx_model.html  mlfmu.utils.builder.html  mlfmu.utils.fmi_builder.html  mlfmu.utils.html  mlfmu.utils.path.html  mlfmu.utils.signals.html  mlfmu.utils.strings.html
_sources/: ADVANCED.md.txt  LICENSE_THIRD_PARTY.md.txt  cli.rst.txt  index.rst.txt
_sources/_autosummary/: mlfmu.api.MlFmuProcess.rst.txt  mlfmu.types.fmu_component.FmiOutputVariable.rst.txt  mlfmu.types.fmu_component.FmiVariability.rst.txt  mlfmu.types.fmu_component.InputVariable.rst.txt  mlfmu.types.fmu_component.ModelComponent.rst.txt  mlfmu.types.fmu_component.OutputVariable.rst.txt  mlfmu.types.fmu_component.Variable.rst.txt  mlfmu.types.onnx_model.ONNXModel.rst.txt  mlfmu.types.rst.txt  mlfmu.utils.builder.rst.txt  mlfmu.utils.interface.rst.txt  mlfmu.utils.logging.rst.txt  mlfmu.utils.path.rst.txt  mlfmu.utils.rst.txt
branch/main/: .buildinfo  ADVANCED.html  CHANGELOG.html  LICENSE.html  LICENSE_THIRD_PARTY.html  MLMODEL.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.mlfmu.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
branch/main/_autosummary/: mlfmu.api.MlFmuBuilder.html  mlfmu.api.MlFmuCommand.html  mlfmu.api.MlFmuProcess.html  mlfmu.api.html  mlfmu.types.fmu_component.BaseModelConfig.html  mlfmu.types.fmu_component.FmiCausality.html  mlfmu.types.fmu_component.FmiInputVariable.html  mlfmu.types.fmu_component.FmiModel.html  mlfmu.types.fmu_component.FmiOutputVariable.html  mlfmu.types.fmu_component.FmiVariability.html  mlfmu.types.fmu_component.FmiVariable.html  mlfmu.types.fmu_component.FmiVariableType.html  mlfmu.types.fmu_component.InputVariable.html  mlfmu.types.fmu_component.InternalState.html  mlfmu.types.fmu_component.ModelComponent.html  mlfmu.types.fmu_component.OutputVariable.html  mlfmu.types.fmu_component.Variable.html  mlfmu.types.fmu_component.html  mlfmu.types.html  mlfmu.types.onnx_model.ONNXModel.html  mlfmu.types.onnx_model.html  mlfmu.utils.builder.html  mlfmu.utils.fmi_builder.html  mlfmu.utils.html  mlfmu.utils.interface.html  mlfmu.utils.logging.html  mlfmu.utils.path.html  mlfmu.utils.signals.html  mlfmu.utils.strings.html
branch/main/_sources/: MLMODEL.md.txt  api.rst.txt  cli.mlfmu.rst.txt
branch/main/_sources/_autosummary/: mlfmu.api.MlFmuBuilder.rst.txt  mlfmu.api.MlFmuCommand.rst.txt  mlfmu.api.rst.txt  mlfmu.types.fmu_component.BaseModelConfig.rst.txt  mlfmu.types.fmu_component.FmiCausality.rst.txt  mlfmu.types.fmu_component.FmiInputVariable.rst.txt  (+9 more)
docs/interface/: schema.html
docs/schema/: schema.json
docs/source/: ADVANCED.md  LICENSE_THIRD_PARTY.md  MLMODEL.md  api.rst  cli.rst  conf.py  index.rst  mlfmu.api.rst  mlfmu.rst  mlfmu.subpackage1.module1.rst  mlfmu.subpackage1.rst  mlfmu.subpackage2.module2.rst  mlfmu.subpackage2.rst  mlfmu.utils.logging.rst  mlfmu.utils.rst
docs/source/_templates/: custom-module.rst
examples/: README.md  requirements.txt  utils.py
examples/data/: README.md
examples/wind_generator/WindGenerator/: modelDescription.xml
examples/wind_generator/config/: interface.json
examples/wind_generator/ml_model/: generator_to_onnx.py  train_model.py  wind_generator_model.py
examples/wind_to_power/WindToPower/: modelDescription.xml
examples/wind_to_power/config/: example.onnx  interface.json
examples/wind_to_power/ml_model/: power_to_onnx.py  train_model.py  wind_to_power_model.py
examples/wind_to_power_pyspark/MLFMU_RF_Regressor/: modelDescription.xml
examples/wind_to_power_pyspark/config/: interface.json  rf_model.onnx
examples/wind_to_power_pyspark/ml_model/: requirements.txt  rf_model.onnx  wind-turbine-power-prediction-gbtregressor-pyspark.ipynb
src/mlfmu/: __init__.py  api.py
src/mlfmu/cli/: mlfmu.py  publish_docs.py
src/mlfmu/fmu_build/: CMakeLists.txt  conanfile.txt
src/mlfmu/types/: FMU_component.py  component_examples.py  fmu_component.py  onnx_model.py
src/mlfmu/utils/: builder.py  fmi_builder.py  interface.py  logger.py  logging.py  signals.py  strings.py
stubs/onnxruntime/: __init__.pyi
templates/fmu/: fmu_template.cpp  model_definitions_template.h
templates/onnx_fmu/: onnxFmu.cpp  onnxFmu.hpp
tests/: conftest.py  test_api.py
tests/cli/: test_mlfmu_cli.py
tests/data/: example.onnx
tests/subpackage1/: test_module1.py
tests/subpackage2/: test_module2.py
tests/types/: test_fmu_component.py
tests/utils/: test_builder.py  test_fmu_template.py  test_interface_validation.py  test_modelDescription_builder.py
(+9 files in other folders)
